Fixed layout issues Added layout to Trending

--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ ul {
     list-style: none;
 }
 
+p {
+    color: #8c8c8c;
+}
+
 /* Images and Media */
 img {
     display: block;
@@ -181,8 +185,6 @@ ul li {
 
 .user-container {
     grid-column: 3 / 5;
-
-    /* border: 1px solid red;    */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -221,6 +223,7 @@ ul li {
 
 .greeting p {
     font-weight: 900;
+    color: black;
 }
 
 .greeting h1 {
@@ -262,18 +265,15 @@ ul li {
 .projects-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 3fr 3fr;
 }
 
-.projects-container h1 {
+.projects-container h1, .aside h1 {
+    display: grid;
     grid-column: 1 / 3;
     font-size: var(--default-font-size);
     font-weight: 900;
     margin-left: 8px;
     padding-top: 20px;
-
-
-    /* align-self: flex-end; */
 }
 
 .card {
@@ -307,16 +307,9 @@ ul li {
 }
 
 .aside {
-    display: grid;
-    /* grid-template-columns: 1fr; */
-}
-
-.aside h1 {
-    /* grid-column: 1; */
-    font-size: var(--default-font-size);
-    font-weight: 900;
-    margin-left: 8px;
-    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .announcements-container, .trending-container {
@@ -324,20 +317,43 @@ ul li {
     box-shadow: 0px 2px 3px rgb(175, 175, 175);
     padding: 20px 20px 20px 25px;
     border-radius: 10px;
-    min-width: 231px;
-
-
-    border: 1px solid red;
+    min-width: 450px;
+    margin: 8px;
 
 }
 
 .announcement {
-    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 6px;
+}
 
+.announcement + .announcement {
+    border-top: 1px solid #e7e5e4;
+}
+
+.announcement h3 {
+    font-weight: bold;
 }
 
 .trending {
     display: flex;
-    gap: 10px;
+    gap: 22px;
+    padding: 6px;
 
+}
+
+.trending img {
+    width: 50px;
+}
+
+.trending-content p:first-child {
+    color: black;
+    font-size: 18px;
+}
+
+.trending-content p:last-child:hover {
+    text-decoration: overline;
+    color: #3c3cfc;
 }
